# cpp-playground

./: .clang-format  .gitignore  CMakeLists.txt  local_config.vim  make-clang.sh  make-gcc.sh  make-msys.sh  ninja-clang-debug.sh  ninja-clang.sh  ninja-gcc.sh  vs2019-win32.sh  vs2019-x64.sh
src/: cpp17-stl-update.cpp  cpp17-stl-update.cxx  cpp17-stl-update.h  env_check.cxx  env_check.h  format.cxx  format.h  forward-ref.cxx  forward-ref.h  main.cxx  meta-programming.cxx  meta-programming.h  numeric-cast.cxx  numeric-cast.h  pipe.cxx  pipe.h  template-test.cxx  template-test.h  type-traits.cxx  type-traits.h  util.cxx  util.h
